[gd_scene load_steps=18 format=3 uid="uid://b2w2fha6aojyk"]

[ext_resource type="Script" path="res://Scene/SupportScenes/tower2.gd" id="1_nnpce"]
[ext_resource type="Texture2D" uid="uid://ds5aqqacdranf" path="res://Assets/Towers/tower1.png" id="1_wtfdn"]
[ext_resource type="Texture2D" uid="uid://d1qty6m50sq4" path="res://Assets/Towers/tower2.png" id="2_7p04k"]
[ext_resource type="Texture2D" uid="uid://bmtqfeu25r073" path="res://Assets/Towers/tower3.png" id="3_57xf5"]
[ext_resource type="Texture2D" uid="uid://dk34ydvvktfqk" path="res://Assets/Icons/playing/upgrade.png" id="5_gf1pb"]
[ext_resource type="Texture2D" uid="uid://cw0b5sgohrs2k" path="res://Assets/Icons/playing/remove.png" id="6_qutac"]
[ext_resource type="Texture2D" uid="uid://vpgrag8nnyqx" path="res://Assets/Icons/playing/reload_hp_red.png" id="7_hl74h"]
[ext_resource type="Texture2D" uid="uid://cqwor2uytkkpl" path="res://Assets/Icons/playing/tower_reload_blue.png" id="8_irxv2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5wxy1"]
size = Vector2(84, 85)

[sub_resource type="CircleShape2D" id="CircleShape2D_2k1no"]
radius = 200.0

[sub_resource type="GDScript" id="GDScript_wqenf"]
script/source = "extends CollisionShape2D

# Called when the node enters the scene tree for the first time.
func _ready():
	hide()

func _draw():
	var cen = Vector2(0,0)
	var rad= get_parent().get_parent().range
	var col=Color(0,255,0,0.3)
	draw_circle(cen,rad,col)
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aay78"]
size = Vector2(111, 106)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mdw5s"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 280
corner_radius_top_right = 280
corner_radius_bottom_right = 280
corner_radius_bottom_left = 280

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_phnq2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e5ata"]
texture = ExtResource("7_hl74h")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i05k8"]
texture = ExtResource("8_irxv2")

[sub_resource type="GDScript" id="GDScript_o33w2"]
script/source = "extends ProgressBar

func _process(_delta):
	self.max_value = $Timer.wait_time
	self.value = $Timer.time_left
"

[node name="tower2" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_nnpce")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9.5)
shape = SubResource("RectangleShape2D_5wxy1")
one_way_collision_margin = 0.0

[node name="Aim" type="Marker2D" parent="."]
position = Vector2(0, -69)

[node name="Tower2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tower2"]
shape = SubResource("CircleShape2D_2k1no")
script = SubResource("GDScript_wqenf")

[node name="tower_detector" type="Area2D" parent="."]
process_mode = 3
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="tower_detector"]
position = Vector2(-0.5, 5)
shape = SubResource("RectangleShape2D_aay78")

[node name="Tower2(phrase_1)" type="Sprite2D" parent="."]
position = Vector2(0, -32)
scale = Vector2(1.3, 1.3)
texture = ExtResource("1_wtfdn")

[node name="Tower2(phrase_2)" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -32)
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_7p04k")

[node name="Tower2(phrase_3)" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -32)
scale = Vector2(1.3, 1.3)
texture = ExtResource("3_57xf5")

[node name="BulletContainer" type="Node" parent="."]

[node name="area" type="Panel" parent="."]
modulate = Color(0, 0, 1, 0.470588)
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mdw5s")

[node name="Upgrade" type="Node" parent="."]

[node name="Upgrade" type="Panel" parent="Upgrade"]
visible = false
offset_left = -30.0
offset_top = -96.0
offset_right = 30.0
offset_bottom = 26.0
theme_override_styles/panel = SubResource("StyleBoxTexture_phnq2")

[node name="HBoxContainer" type="VBoxContainer" parent="Upgrade/Upgrade"]
layout_mode = 0
offset_left = -7.0
offset_top = -4.0
offset_right = 68.0
offset_bottom = 126.0
theme_override_constants/separation = 0

[node name="Upgrade" type="TextureButton" parent="Upgrade/Upgrade/HBoxContainer"]
custom_minimum_size = Vector2(75, 65)
layout_mode = 2
texture_normal = ExtResource("5_gf1pb")
stretch_mode = 0

[node name="Delete" type="TextureButton" parent="Upgrade/Upgrade/HBoxContainer"]
custom_minimum_size = Vector2(75, 65)
layout_mode = 2
texture_normal = ExtResource("6_qutac")
texture_pressed = ExtResource("6_qutac")
stretch_mode = 0

[node name="ProgressBar" type="ProgressBar" parent="Upgrade"]
anchors_preset = -1
anchor_right = 0.00234375
offset_left = -50.0
offset_top = 56.0
offset_right = 50.0
offset_bottom = 72.0
theme_override_styles/background = SubResource("StyleBoxTexture_e5ata")
theme_override_styles/fill = SubResource("StyleBoxTexture_i05k8")
value = 50.0
show_percentage = false
script = SubResource("GDScript_o33w2")
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="Upgrade/ProgressBar"]
wait_time = 5.0

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="body_entered" from="Tower2" to="." method="_on_tower_2_body_entered"]
[connection signal="body_exited" from="Tower2" to="." method="_on_tower_2_body_exited"]
[connection signal="mouse_entered" from="Upgrade/Upgrade/HBoxContainer/Upgrade" to="." method="_on_upgrade_mouse_entered"]
[connection signal="mouse_exited" from="Upgrade/Upgrade/HBoxContainer/Upgrade" to="." method="_on_upgrade_mouse_exited"]
[connection signal="pressed" from="Upgrade/Upgrade/HBoxContainer/Upgrade" to="." method="_on_upgrade_pressed"]
[connection signal="pressed" from="Upgrade/Upgrade/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="timeout" from="Upgrade/ProgressBar/Timer" to="." method="_on_timer_timeout"]
